@@ -7,6 +7,7 @@
 	- display more error messages on console
 	- extension column at finddialog added (#3496363)
 	- crash at closing file duplicates dialog fixed
+	- disable menubar and toolbar if finddialog is open
 
 07. Mar 2012 Christoph Thielecke <crissi99@gmx.de>
 	- storing adddialog size and position added
